--- a/style.css
+++ b/style.css
@@ -7,16 +7,29 @@ body {
 .accessoriesTable {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .row {
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    border: 3px solid white;
+}
+
+.middleRows {
     width: 100%;
-    border: 1px solid white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.middleRow {
+    border-left-width: 2px;
+    border-right-width: 2px;
 }
 
 .headerRow, .footerRow {
@@ -24,7 +37,17 @@ body {
 }
 
 .column {
+    min-width: 116px;
     text-align: center;
-    border-right: 1px solid white;
-    min-width: 150px;
+    min-height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 60px;
+    overflow: hidden;
+    border-right: 3px solid white;
+}
+
+.headerRow .column, .footerRow .column {
+    border-width: 3px;
 }
